Desktop Page Info/Views: Allow custom tooltips on HoverButtons if required.

HoverButtons currently set their own tooltips based on the whether the text
contained in its |title_| and |subtitle_| have enough space to show. These
update every time the title text changes or the view bounds change, so they
overwrite any custom tooltips set by callers. Fix by adding a flag to turn
auto-tooltips off.

Bug: 792962
Change-Id: I4a99bbfe76d716295249f670f017ff07349e90e1